# basscoast-the-gathering

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: docker-release.yml
data/: bass_coast_artists_history.json
migrations/: 001_initial_schema.sql
src/: main.rs
src/db/: models.rs  queries.rs
src/handlers/: artists.rs  auth.rs  edits.rs  mod.rs  mtg.rs
src/migration/: enrich_metadata.rs  import_json.rs
src/services/: mod.rs  mtg_service.rs
static/css/: style.css
static/js/: card-viewer.js
