[package]
name = "bctg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bctg"
path = "src/main.rs"

[[bin]]
name = "import-json"
path = "src/migration/import_json.rs"

[[bin]]
name = "enrich-metadata"
path = "src/migration/enrich_metadata.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-cookies = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# HTTP client (for Scryfall API)
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
